Kubernetes/Yaml_Svc/ingress1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-one
  labels:
    name: one
spec:
  containers:
  - name: app-one
    image: hashicorp/http-echo
    args:
      - "-text=one"
---
apiVersion: v1
kind: Service
metadata:
  name: one-service
spec:
  selector:
    app: one
  ports:
  - port: 5678
---
apiVersion: v1
kind: Pod
metadata:
  name: app-two
  labels:
    name: two
spec:
  containers:
  - name: app-two
    image: hashicorp/http-echo
    args:
      - "-text=two"
---
apiVersion: v1
kind: Service
metadata:
  name: two-service
spec:
  selector:
    app: two
  ports:
  - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: "/one"
        backend:
          service:
            name: one-service
            port: 
              number: 5678
      - pathType: Prefix
        path: "/two"
        backend:
          service:
            name: two-service
            port: 
              number: 5678
